<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Caculation"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:text="VA_Archiment &amp; Contructinon"/>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nestscroll">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="Chọn loại nhà"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text"
                    android:layout_margin="6dp"
                    android:hint="@string/list_house"
                    android:id="@+id/layout_edt1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/auto_complete_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />


                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/text2"
                    android:layout_below="@+id/layout_edt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chọn hình thức xây nhà"
                    android:textSize="20dp"
                    android:layout_margin="6dp"
                    android:textColor="@color/black"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text2"
                    android:layout_margin="6dp"
                    android:id="@+id/layout_edt3"
                    android:hint="@string/list_house_style"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/auto_complete_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        tools:ignore="DuplicateClickableBoundsCheck" />



                </com.google.android.material.textfield.TextInputLayout>



                <TextView
                    android:id="@+id/text3"
                    android:layout_below="@+id/layout_edt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chiều rộng m2 "
                    android:textSize="20dp"
                    android:layout_margin="6dp"
                    android:textColor="@color/black"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:id="@+id/layout_edt4"
                    android:layout_below="@+id/text3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_width"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>



                <TextView
                    android:id="@+id/text4"
                    android:layout_below="@+id/layout_edt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chiều dài m2 "
                    android:textSize="20dp"
                    android:layout_margin="6dp"
                    android:textColor="@color/black"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:id="@+id/layout_edt5"
                    android:layout_below="@+id/text4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text5"
                    android:layout_below="@+id/layout_edt5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nhập số tầng"
                    android:textSize="20dp"
                    android:layout_margin="6dp"
                    android:textColor="@color/black"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text5"
                    android:layout_margin="6dp"
                    android:id="@+id/layout_edt6"
                    android:hint="@string/list_house_floor"
                    android:visibility="gone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/auto_complete_floor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />



                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text6"
                    android:layout_below="@+id/layout_edt6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chọn loại móng"
                    android:textSize="20dp"
                    android:layout_margin="6dp"
                    android:textColor="@color/black"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text6"
                    android:layout_margin="6dp"
                    android:id="@+id/layout_edt7"
                    android:hint="@string/list_mong"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    <AutoCompleteTextView
                        android:id="@+id/auto_complete_mong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"/>



                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text7"
                    android:layout_below="@+id/layout_edt7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chọn loại mái"
                    android:textSize="20dp"
                    android:layout_margin="6dp"
                    android:textColor="@color/black"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text7"
                    android:layout_margin="6dp"
                    android:id="@+id/layout_edt8"
                    android:hint="@string/list_mai"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    <AutoCompleteTextView
                        android:id="@+id/auto_complete_coc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"/>



                </com.google.android.material.textfield.TextInputLayout>



                <LinearLayout
                    android:id="@+id/btn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_edt8"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_margin="10dp"
                        android:id="@+id/btn_cal"
                        android:background="#092EFB"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" kết quả"/>

                    <Button
                        android:textColor="@color/white"
                        android:layout_margin="10dp"
                        android:background="#092EFB"
                        android:id="@+id/btn_Reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Làm lại"/>



                </LinearLayout>

                <TextView
                    android:layout_centerInParent="true"
                    android:id="@+id/texttong"
                    android:layout_below="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20dp"
                    android:layout_marginTop="26dp"
                    android:textColor="@color/black"/>


            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>




    </androidx.cardview.widget.CardView>
    

</RelativeLayout>